--- a/package.json
+++ b/package.json
@@ -2,46 +2,18 @@
   "name": "canvasjs",
   "version": "1.8.2-pre",
   "description": "CanvasJS charting library",
-  "main": "src/main/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "browserify ./src/main/index.js -d --s 'CanvasJS' > dist/canvasjs.js && node_modules/uglify-js/bin/uglifyjs --compress --mangle -- dist/canvasjs.js > dist/canvasjs.min.js",
-    "docs": "rm -rf docs/out/$npm_package_version && jsdoc src --configure jsdoc.conf",
-    "plato": "babel -d es5 src && plato -r -d docs/plato -t 'CanvasJS' es5 && rm -rf es5",
-    "lint": "eslint --ext .js src",
-    "bump": "npm run bump:patch",
-    "bump:patch": "npm-bump patch origin master",
-    "bump:minor": "npm-bump minor origin master",
-    "bump:major": "npm-bump major origin master"
+    "build": "webpack -p"
   },
   "repository": "https://github.com/Tsur/canvasjs.git",
   "license": "CC",
   "dependencies": {},
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-stage-1": "^6.1.18",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
-    "ghooks": "^1.0.1",
-    "uglify-js": "^2.6.1",
-    "npm-bump": "0.0.15"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015",
-            "stage-1"
-          ]
-        }
-      ]
-    ]
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run build && git add . --all",
-      "pre-push": "npm run test"
-    }
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^3.10.0"
   }
 }
