--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "canvasjs",
+  "version": "1.8.2-1",
   "description": "CanvasJS charting library",
   "main": "dist/index.js",
   "scripts": {
     "build": "webpack -p"
   },
+  "repository": "https://github.com/matthieuy/canvasjs.git",
   "license": "CC",
   "dependencies": {},
   "devDependencies": {
